--- a/frontend/bounty.html
+++ b/frontend/bounty.html
@@ -93,8 +93,8 @@
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+    <div id="container">
+      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace 2021</p>
     </div>
     <!-- /.container -->
   </footer>
