0004 - Adjusted footer for bounty page, added a form for the bounty page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -251,10 +251,9 @@
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+    <div id="container">
+      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace 2021</p>
     </div>
-    <!-- /.container -->
   </footer>
 
   <!-- Bootstrap core JavaScript -->
