Update contacts and about
TODO: update foot to include 'LLC' in 'MakUrSpace 2021' copyright statements

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -99,10 +99,9 @@
         <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
       </div>
       <div class="col-lg-6">
-        <h2>About Modern Business</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+        <h2>What is MakUrSpace?</h2>
+	<p>MakUrSpace delivers access to technology and education that would otherwise be out of reach. Our services and products first provide access to creative resources and second encourage the utilization of those resources through a requested goods platform.</p>
+	<p>We help people make stuff.</p>
       </div>
     </div>
     <!-- /.row -->
@@ -115,12 +114,12 @@
         <div class="card h-100 text-center">
           <img class="card-img-top" src="http://placehold.it/750x450" alt="">
           <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+            <h4 class="card-title">Luther Blackwood</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Director</h6>
+	    <p class="card-text"></p>
           </div>
           <div class="card-footer">
-            <a href="#">name@example.com</a>
+            <a href="#">lutherblackwood@makurspace.com</a>
           </div>
         </div>
       </div>
@@ -128,12 +127,12 @@
         <div class="card h-100 text-center">
           <img class="card-img-top" src="http://placehold.it/750x450" alt="">
           <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+            <h4 class="card-title">Brandon Hall</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Chief Operations Officer</h6>
+            <p class="card-text"></p>
           </div>
           <div class="card-footer">
-            <a href="#">name@example.com</a>
+            <a href="#">brandonhall@makurspace.com</a>
           </div>
         </div>
       </div>
@@ -141,12 +140,12 @@
         <div class="card h-100 text-center">
           <img class="card-img-top" src="http://placehold.it/750x450" alt="">
           <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+            <h4 class="card-title">Shaquille Smith</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Web Applications Officer</h6>
+            <p class="card-text"></p>
           </div>
           <div class="card-footer">
-            <a href="#">name@example.com</a>
+            <a href="#">shaquillesmith@makurspace.com</a>
           </div>
         </div>
       </div>
@@ -157,22 +156,7 @@
     <h2>Our Customers</h2>
     <div class="row">
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+        <p>Maybe you?</p>
       </div>
     </div>
     <!-- /.row -->
