--- a/frontend/about.html
+++ b/frontend/about.html
@@ -28,9 +28,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">About
-      <small>What is MakUrSpace?</small>
-    </h1>
+    <h1 class="mt-4 mb-3">What is MakUrSpace?</h1>
 
     <!-- Intro Content -->
     <div class="row">
