--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -8,6 +8,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
+  <script src="//code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -19,23 +21,23 @@
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html" target="parent">MakUrSpace</a>
+      <a class="navbar-brand" href="index.html" target="_top">MakUrSpace</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html" target="parent">About</a>
+            <a class="nav-link" href="about.html" target="_top">About</a>
+          </li>
+<!--           <li class="nav-item">
+            <a class="nav-link" href="services.html" target="_top">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html" target="parent">Services</a>
-          </li>
+            <a class="nav-link" href="contact.html" target="_top">Contact</a>
+          </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="contact.html" target="parent">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="bounty.html" target="parent">Bounty</a>
+            <a class="nav-link" href="bounty.html" target="_top">Submit a Bounty</a>
           </li>
           <li class="nav-item">
             <button type="button" class="btn btn-link">Sign Up</button>
