--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -46,4 +46,6 @@
       </div>
     </div>
   </nav>
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
