--- a/frontend/bounty.html
+++ b/frontend/bounty.html
@@ -51,8 +51,8 @@
         <form name="sentMessage" id="contactForm" novalidate method="post" action="/rest/bounty_form" enctype="multipart/form-data">
           <div class="control-group form-group">
             <div class="controls">
-              <label>Bounty:</label>
-              <input type="float" class="form-control" id="Bounty" name="Bounty" required data-validation-required-message="Please enter your name.">
+              <label>Bounty Reward:</label>
+              $<input type="float" class="form-control" id="Bounty" name="Bounty" required data-validation-required-message="Please enter your name.">
               <p class="help-block"></p>
             </div>
           </div>
