--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -28,6 +28,9 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html" target="_top">About</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/bounty_board.html" target="_top">Bounty Board</a>
+          </li>
 <!--           <li class="nav-item">
             <a class="nav-link" href="services.html" target="_top">Services</a>
           </li>
