--- a/frontend/bounty_board.html
+++ b/frontend/bounty_board.html
@@ -14,7 +14,7 @@
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="/css/makurspace.css" rel="stylesheet">
+  <link href="css/modern-business.css" rel="stylesheet">
 
   <link rel="shortcut icon" href="MakUrSpace_Logo.png" type="image/x-icon">
 
@@ -22,18 +22,17 @@
 
 <body>
   <!-- Navigation -->
-  <div class="container">
-    <object data="/navbar.html" width="100%"></object>
-    <h2>MakUrSpace Bounty Board</h2>
-    <!-- Content -->
-    <div class="container-fluid vh-100 w-100">
-      <object data="/content/bounty_board.html" height="100%" width="100%"></object>
+  <div class="container-fluid vh-100">
+    <object data="/navbar.html" width="100%" style='border:0'></object>
+
+    <h2 class="mt-3">MakUrSpace Bounty Board</h2>
+    <div class="row mt-0 pt-0 vh-100 w-100" align="center">
+      <object class="mx-auto" data="/content/bounty_board.html" height="100%" width="100%"></object>
     </div>
-  <div class="container">
+  </div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="/vendor/jquery/jquery.min.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
