--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,51 +22,59 @@
 
 <body>
   <!-- Navigation -->
-  <div class="container-fluid h-100">
-    <object data="/navbar.html" width="100%"></object>
+  <div class="container-fluid vh-100">
+    <div class="row">
+      <object data="/navbar.html" width="100%"></object>
+    </div>
 
-    <header>
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active" style="background-image: url('MakUrSpace_Logo.png')">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>Welcome to MakUrSpace</h3>
-              <p>Create Your World</p>
+    <div class="container-fluid w-100">
+      <header>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active" style="background-image: url('MakUrSpace_Logo.png')">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Welcome to MakUrSpace</h3>
+                <p>Create Your World</p>
+              </div>
+            </div>
+            <div class="carousel-item" style="background-image: url('1.jpg">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Beholder Set</h3>
+                <p>It gets shot in the head, but rises again</p>
+              </div>
+            </div>
+            <div class="carousel-item" style="background-image: url('2.jpg')">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Young Silver Dragon</h3>
+              </div>
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url('1.jpg">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>Beholder Set</h3>
-              <p>It gets shot in the head, but rises again</p>
-            </div>
-          </div>
-          <div class="carousel-item" style="background-image: url('2.jpg')">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>Young Silver Dragon</h3>
-            </div>
-          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </header>
+      </header>
+    </div>
 
-    <h2>MakUrSpace Bounty Board</h2>
-    <div class="container-fluid vh-100 w-100">
-      <object data="/content/bounty_board.html" height="100%" width="100%"></object>
+    <h2 class="mt-3">MakUrSpace Bounty Board</h2>
+    <div class="row mt-0 pt-0 vh-100 w-100" align="center">
+      <object class="mx-auto" data="/content/bounty_board.html" height="100%" width="100%"></object>
     </div>
   </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="/vendor/jquery/jquery.min.js"></script>
+  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
