--- a/frontend/about.html
+++ b/frontend/about.html
@@ -22,7 +22,7 @@
 <body>
 
   <!-- Navigation -->
-  <object data="/navbar.html" width="100%"></object>
+  <iframe data="/navbar.html" width="100%"></iframe>
 
   <!-- Page Content -->
   <div class="container">
