--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,10 +10,7 @@
 
   <title>MakUrSpace</title>
 
-  <!-- Bootstrap core CSS -->
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
   <link href="/css/makurspace.css" rel="stylesheet">
 
   <link rel="shortcut icon" href="MakUrSpace_Logo.png" type="image/x-icon">
@@ -21,10 +18,9 @@
 </head>
 
 <body>
-  <!-- Navigation -->
   <div class="container-fluid vh-100">
     <div class="row">
-      <object data="/navbar.html" width="100%"></object>
+      <iframe data="/navbar.html" width="100%" frameborder="0"></iframe>
     </div>
 
     <div class="container-fluid w-100">
@@ -66,13 +62,12 @@
       </header>
     </div>
 
-    <h2 class="mt-3">MakUrSpace Bounty Board</h2>
+    <h2 class="mt-2">MakUrSpace Bounty Board</h2>
     <div class="row mt-0 pt-0 vh-100 w-100" align="center">
-      <object class="mx-auto" data="/content/bounty_board.html" height="100%" width="100%"></object>
+      <iframe class="mx-auto" data="/content/bounty_board.html" height="100%" width="100%" frameborder="0"></iframe>
     </div>
   </div>
 
-  <!-- Bootstrap core JavaScript -->
   <script src="/vendor/jquery/jquery.min.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
