--- a/frontend/bounty_board.html
+++ b/frontend/bounty_board.html
@@ -23,11 +23,11 @@
 <body>
   <!-- Navigation -->
   <div class="container-fluid vh-100">
-    <object data="/navbar.html" width="100%" style='border:0'></object>
+    <iframe data="/navbar.html" width="100%" style='border:0' frameborder="0"></iframe>
 
     <h2 class="mt-3">MakUrSpace Bounty Board</h2>
     <div class="row mt-0 pt-0 vh-100 w-100" align="center">
-      <object class="mx-auto" data="/content/bounty_board.html" height="100%" width="100%"></object>
+      <iframe class="mx-auto" data="/content/bounty_board.html" height="100%" width="100%" frameborder="0"></iframe>
     </div>
   </div>
 
