--- a/frontend/about.html
+++ b/frontend/about.html
@@ -8,24 +8,19 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>About</title>
-
-  <!-- Bootstrap core CSS -->
+  <title>About MakUrSpace</title>
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="shortcut icon" href="MakUrSpace_Logo.png" type="image/x-icon">
-  
-  <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
+  <link href="/css/makurspace.css" rel="stylesheet">
 
 </head>
 
 <body>
-
-  <!-- Navigation -->
-  <iframe data="/navbar.html" width="100%"></iframe>
+  <div class="container" id="navbar"></div>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="container" style="margin-top: 50px">
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">What is MakUrSpace?</h1>
@@ -104,6 +99,17 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script>
+    $(document).ready(function(){
+      $.ajax({
+        url : `/navbar.html`,
+        type : "GET"
+      }).done(function(response){
+        const container = document.querySelector("#navbar")
+        container.innerHTML = response
+      })
+    })
+  </script>
 
 </body>
 
