--- a/frontend/bounty.html
+++ b/frontend/bounty.html
@@ -10,23 +10,24 @@
   <title>MakUrSpace Bounty Application</title>
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/modern-business.css" rel="stylesheet">
+  <link href="/css/makurspace.css" rel="stylesheet">
 
   <link rel="shortcut icon" href="MakUrSpace_Logo.png" type="image/x-icon">
 
 </head>
 
 <body>
-
-  <!-- Navigation -->
-  <iframe data="/navbar.html" width="100%"></iframe>
-
-  <!-- Page Content -->
-
-    <!-- Bounty Form -->
-  <div class="container">
+  <div class="container" id="navbar"></div>
+  <div class="container" style="margin-top: 50px">
+    <h2 class="mt-2">Submit a Bounty!</h2>
     <div class="row">
       <div class="col-lg-8 mb-4">
-        <h2 class="mt-2">Submit a Bounty!</h2>
+        <form>
+          <div class="controls">
+            <label>Reference Material:<div id="reference_material_file_list"></div></label>
+            <input type="file" multiple class="form-control" id="ReferenceMaterial" name="ReferenceMaterial" onchange="javascript:upload_reference_material()">
+          </div>
+        </form>
         <form name="sentMessage" id="bounty_form" novalidate enctype="multipart/form-data" method="post" action="/rest/bounty_form" enctype="multipart/form-data">
           <div class="control-group form-group input-group">
             <div class="controls">
@@ -53,18 +54,15 @@
               <input type="email" class="form-control" id="Contact" name="Contact" required data-validation-required-message="Please enter an email address for the recipient of the bounty">
             </div>
           </div>
-            <div class="control-group form-group">
-              <form>
-                <div class="controls">
-                  <label>Reference Material:<div id="reference_material_file_list"></div></label>
-                  <input type="file" multiple class="form-control" id="ReferenceMaterial" name="ReferenceMaterial" onchange="javascript:upload_reference_material()">
-                </div>
-              </form>
-            </div>
           <div class="control-group form-group">
             <div class="controls">
               <label>Bounty Description:</label>
               <textarea rows="10" cols="100" class="form-control" id="BountyDescription" name="BountyDescription" required data-validation-required-message="Please a description of the bounty" rows="5" maxlength="999" style="resize:none"></textarea>
+            </div>
+          </div>
+          <div class="control-group form-group">
+            <div class="controls">
+              <input type="hidden" class="form-control" id="ReferenceMaterialNames" name="ReferenceMaterialNames" value='[]'>
             </div>
           </div>
           <div id="success"></div>
@@ -75,22 +73,28 @@
 
     </div>
     <!-- /.row -->
-
   </div>
-  <!-- /.container -->
 
-  <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div id="container">
       <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2021</p>
     </div>
   </footer>
 
-  <!-- Bootstrap core JavaScript -->
   <script src="/vendor/jquery/jquery.min.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="/rest/upload_reference_material.js"></script>
-
+  <script>
+    $(document).ready(function(){
+      $.ajax({
+        url : `/navbar.html`,
+        type : "GET"
+      }).done(function(response){
+        const container = document.querySelector("#navbar")
+        container.innerHTML = response
+      })
+    })
+  </script>
 </body>
 
 </html>
