--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,11 +18,8 @@
 </head>
 
 <body>
+  <div class="container" id="navbar"></div>
   <div class="container-fluid vh-100">
-    <div class="row">
-      <iframe data="/navbar.html" width="100%" frameborder="0"></iframe>
-    </div>
-
     <div class="container-fluid w-100">
       <header>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -62,14 +59,35 @@
       </header>
     </div>
 
-    <h2 class="mt-2">MakUrSpace Bounty Board</h2>
-    <div class="row mt-0 pt-0 vh-100 w-100" align="center">
-      <iframe class="mx-auto" data="/content/bounty_board.html" height="100%" width="100%" frameborder="0"></iframe>
-    </div>
+    <h2 class="container mt-2">MakUrSpace Bounty Board</h2>
+    <div class="row mt-0 pt-0 vh-100 w-100" align="center" id="bountyboard"></div>
   </div>
 
   <script src="/vendor/jquery/jquery.min.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script>
+    $(document).ready(function(){
+      $.ajax({
+        url : `/rest/rendered_bountyboard`,
+        type : "GET"
+      }).done(function(response){
+        const container = document.createElement('div')
+        container.innerHTML = response
+        document.querySelector("#bountyboard").appendChild(container)
+      })
+    })
+  </script>
+  <script>
+    $(document).ready(function(){
+      $.ajax({
+        url : `/navbar.html`,
+        type : "GET"
+      }).done(function(response){
+        const container = document.querySelector("#navbar")
+        container.innerHTML = response
+      })
+    })
+  </script>
 </body>
 
 </html>
