--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -1,49 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="css/makurspace.css" rel="stylesheet">
-
-  <link rel="shortcut icon" href="MakUrSpace_Logo.png" type="image/x-icon">
-</head>
-<body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="index.html" target="_top">MakUrSpace</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="about.html" target="_top">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/bounty_board.html" target="_top">Bounty Board</a>
-          </li>
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html" target="_top">MakUrSpace</a>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/about.html" target="_top">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/bountyboard.html" target="_top">Bounty Board</a>
+        </li>
 <!--           <li class="nav-item">
-            <a class="nav-link" href="services.html" target="_top">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html" target="_top">Contact</a>
-          </li> -->
-          <li class="nav-item">
-            <a class="nav-link" href="bounty.html" target="_top">Submit a Bounty</a>
-          </li>
-        </ul>
-      </div>
+          <a class="nav-link" href="services.html" target="_top">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html" target="_top">Contact</a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="/bounty.html" target="_top">Submit a Bounty</a>
+        </li>
+      </ul>
     </div>
-  </nav>
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-</body>
+  </div>
+</nav>
