I don't even know

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,8 +60,15 @@
     </div>
 
     <h2 class="container mt-2">MakUrSpace Bounty Board</h2>
-    <div class="row mt-0 pt-0 vh-100 w-100" align="center" id="bountyboard"></div>
+    <div class="row mt-0 pt-0 vh-100 w-100" align="center" id="bountyboard" style="margin-bottom: 60px"></div>
   </div>
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div id="container">
+      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2021</p>
+    </div>
+  </footer>
 
   <script src="/vendor/jquery/jquery.min.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
