--- a/frontend/about.html
+++ b/frontend/about.html
@@ -79,7 +79,7 @@
 
     <!-- Our Customers -->
     <h2>Our Customers</h2>
-    <div class="row">
+    <div class="row" style="margin-bottom: 30px">
       <div class="col-lg-2 col-sm-4 mb-4">
         <p>Maybe you?</p>
       </div>
