--- a/frontend/bounty.html
+++ b/frontend/bounty.html
@@ -18,7 +18,7 @@
 
 <body>
   <div class="container" id="navbar"></div>
-  <div class="container" style="margin-top: 50px">
+  <div class="container" style="margin-top: 50px; margin-bottom: 30px">
     <h2 class="mt-2">Submit a Bounty!</h2>
     <div class="row">
       <div class="col-lg-8 mb-4">
