Darken bountycard. Add buttons for edits and calling bounty

--- a/frontend/bountyboard.html
+++ b/frontend/bountyboard.html
@@ -17,10 +17,17 @@
 
 <body>
   <div class="container" id="navbar"></div>
-  <div class="container container-fluid vh-100" style="margin-top: 50px">
+  <div class="container container-fluid vh-100" style="margin-top: 50px;margin-bottom: 60px">
     <h1 class="mt-2">MakUrSpace Bounty Board</h1>
     <div class="row mt-0 pt-0 vh-100 w-100" align="center" id="bountyboard"></div>
   </div>
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div id="container">
+      <p class="m-0 text-center text-white">Copyright &copy; MakUrSpace, LLC 2021</p>
+    </div>
+  </footer>
 
   <script src="/vendor/jquery/jquery.min.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
