Add Maker Registration page. Re-add 'request maker' field to Bounty form

--- a/frontend/bounty.html
+++ b/frontend/bounty.html
@@ -66,6 +66,12 @@
           </div>
           <div class="control-group form-group">
             <div class="controls">
+              <label>Request Maker:</label>
+              <input type="text" class="form-control">
+            </div>
+          </div>
+          <div class="control-group form-group">
+            <div class="controls">
               <input type="hidden" class="form-control" id="ReferenceMaterialNames" name="ReferenceMaterialNames" value='[]'>
             </div>
           </div>
