--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/bounty.html" target="_top">Submit a Bounty</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/maker_registration.html" target="_top">Become a Maker</a>
+        </li>
       </ul>
     </div>
   </div>
